# RayTracer

./: CMakeLists.txt  README.md  aarect.h  output.ppm
src/: aabb.h  aarect.h  bvh.h  camera.h  color.h  constant_medium.h  hittable.h  hittable_list.h  main.cc  main.cpp  main.h  material.h  moving_sphere.h  output.ppm  perlin.h  r_stb_image.h  ray.h  sphere.h  texture.h  vec3.h
